--- a/src/App.css
+++ b/src/App.css
@@ -23,15 +23,14 @@
     padding: 0;
     line-height: 10px !important;
 }
-.grid-container .gallery-title button{
+.grid-container .gallery-title span{
     border: none;
     background-color: unset !important;
+    color: #ef4444;
 }
-.grid-container .gallery-title button:hover{
-    background-color: #ef4444 !important;
-    padding: 5px 10px;
-    border-radius: 10px;
-    color: #fff;
+.grid-container .gallery-title span:hover{
+    border-bottom: 2px solid #ef4444;
+    cursor: pointer;
 }
 
 .grid-container img{
@@ -49,6 +48,7 @@
     background: transparent;
     width: 100%;
     height: 100%;
+    border-radius: 5px ;
     left: 0;
     top: 0;
     z-index: 99;
@@ -67,7 +67,7 @@
     height: 100%;
     border-radius: 5px;
 }
-.grid-container .img-container .checkbox{
+.grid-container .img-container .input-checked{
     position: absolute;
     top: 12px;
     left: 12px;
@@ -81,5 +81,5 @@
     height: 100%;
     border: 1px solid #e2e8f0;
     object-fit:cover;
-
+    cursor: pointer;
 }
