--- a/src/App.css
+++ b/src/App.css
@@ -9,42 +9,43 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 10px;
     padding: 10px 0;
+    width: 100%;
+    height: 100%;
 }
-.grid-container .gallery-title{
-    grid-column: 1 / -1;
+.root .gallery-title{
+    /* grid-column: 1 / -1; */
     border-bottom: 2px solid #f5f5f5;
     height: 50px;
     margin-bottom: 30px;
 }
-.grid-container .gallery-title h4, h6, button{
+.root .gallery-title h4, h6, button{
     font-size: 16px;
     letter-spacing: 1px;
     margin: 0;
     padding: 0;
     line-height: 10px !important;
 }
-.grid-container .gallery-title span{
+.root .gallery-title span{
     border: none;
     background-color: unset !important;
     color: #ef4444;
 }
-.grid-container .gallery-title span:hover{
+.root .gallery-title span:hover{
     border-bottom: 2px solid #ef4444;
     cursor: pointer;
 }
 
 .grid-container img{
-    width: 100%;
+    grid-column: 1 / -1;
+    /* width: 100%; */
     border: 1px solid #e2e8f0;
-    z-index: 100;
-    height: 100%;
+    /* z-index: 100; */
+    /* height: 100%; */
     border-radius: 5px ;
     object-fit: cover;
     transition: background-color 0.2;
 }
-.grid-container .checked-img {
-  opacity: 0.5;
-}
+
 
 .img-container::after {
     content: '';
@@ -80,10 +81,11 @@
 .grid-container .img-container .container-checked{
     opacity: .5;
 }
-.grid-container .add-img{
+.root .add-img{
     width:100%;
     height: 100%;
     border: 1px solid #e2e8f0;
     object-fit:cover;
+    border-radius:5px;
     cursor: pointer;
 }
